# TelegramBot_Testword

./: .env.example  ARCHITECTURE.md  README.md  alembic.ini  main.py  pyproject.toml  run.bat
alembic/: README  env.py
bot/: __init__.py
bot/handlers/: commands.py  messages.py
bot/services/: __init__.py  chatgpt.py  history.py
config/: __init__.py  settings.py
